fix(): spacing for aboveTheFold

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -3,11 +3,11 @@
 }
 
 .header {
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
-.main section {
-  margin-top: 5em;
+.main section:not(:first-of-type) {
+  margin-top: 10em;
 }
 
 .aboveTheFold {
